Fix button spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,26 +11,26 @@ body {
   padding: 2.5% 30%;
   display: flex;
   flex-direction: column;
-  gap: 64px;
+  gap: 32px;
 }
 
 div.buttons {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: center;
   gap: 16px;
 }
 
 div.buttons button {
   color: white;
   background-color: rgb(28, 176, 246);
-  padding: 2.5% 0;
   font-size: 32px;
   width: 100%;
   text-align: center;
   border: 2px solid rgb(28, 176, 246);
   border-radius: 16px;
   box-shadow: 0px 3px 3px 0px rgba(24, 153, 214, 0.3);
-  margin: 0 0 3px;
+  padding: 2.5%;
 }
 
 div.buttons button:hover,
